--- a/appsettings.json
+++ b/appsettings.json
@@ -1,17 +1,19 @@
 {
     "GloveSettings": {
-        "Url": "http://manorofmoroz.htc-cs.ru/api/wind?x0={x0}&y0={y0}&vx={vs}&vy={vy}",
-        "Period": 250,
+        "BaseAddress": "http://manorofmoroz.htc-cs.ru/api/",
+        "Query": "wind?x0={0:0.###}&y0={1:0.###}&vx={2:0.###}&vy={3:0.###}",
+        "Period": 100,
+        "VelocityCoefficient": 0.1,
         "MinArea": 1000,
         "Area": {
-            "X1": -16,
-            "X2": 16,
+            "X1": 16,
+            "X2": -16,
             "Y1": 9,
             "Y2": -9
         },
 
         "CameraIndex": 0,
-        "CameraMode": "CameraAndMask",
+        "CameraMode": "Camera",
         "ColorRanges":
         {
             "Lower1": [0, 120, 70],
