--- a/appsettings.json
+++ b/appsettings.json
@@ -16,10 +16,20 @@
         "CameraMode": "Camera",
         "ColorRanges":
         {
-            "Lower1": [0, 120, 70],
-            "Upper1": [10, 255, 255],
+            "Lower1": [170, 120, 70],
+            "Upper1": [180, 255, 255],
             "Lower2": [170, 120, 70],
             "Upper2": [180, 255, 255]
+
+            //"Lower1": [0, 120, 70],
+            //"Upper1": [10, 255, 255],
+            //"Lower2": [0, 120, 70],
+            //"Upper2": [10, 255, 255]
+
+            //"Lower1": [0, 120, 70],
+            //"Upper1": [10, 255, 255],
+            //"Lower2": [170, 120, 70],
+            //"Upper2": [180, 255, 255]
         }
     }
 }
