--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,13 @@
 {
+    "FaceTrackerSettings": {
+        "DistanceBetweenCameras": 0.58,
+        "CameraHeight": 1.26,
+        "CameraHorizontalAngle": 76,
+        "CameraVerticalAngle": 53,
+        "ImageWidth": 640,
+        "ImageHeight": 480
+    },
+
     "GloveSettings": {
         "BaseAddress": "http://manorofmoroz.htc-cs.ru/api/",
         "Query": "wind?x0={0:0.###}&y0={1:0.###}&vx={2:0.###}&vy={3:0.###}",
@@ -14,27 +23,11 @@
 
         "CameraIndex": 0,
         "CameraMode": "Camera",
-        "ColorRanges":
-        {
+        "ColorRanges": {
             "Lower1": [0, 70, 70],
             "Upper1": [5, 220, 220],
             "Lower2": [160, 30, 30],
             "Upper2": [180, 255, 255]
-
-            //"Lower1": [170, 120, 70],
-            //"Upper1": [180, 255, 255],
-            //"Lower2": [170, 120, 70],
-            //"Upper2": [180, 255, 255]
-
-            //"Lower1": [0, 120, 70],
-            //"Upper1": [10, 255, 255],
-            //"Lower2": [0, 120, 70],
-            //"Upper2": [10, 255, 255]
-
-            //"Lower1": [0, 120, 70],
-            //"Upper1": [10, 255, 255],
-            //"Lower2": [170, 120, 70],
-            //"Upper2": [180, 255, 255]
         }
     }
 }
