--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,14 @@
 {
+    "TriangleSettings": {
+        "Width": 800,
+        "Height": 600,
+        "Title": "Треугольник"
+    },
+
+    "CubemapSettings": {
+
+    },
+
     "FaceTrackerSettings": {
         "DistanceBetweenCameras": 0.58,
         "CameraHeight": 1.26,
