[add] интерактивная настройка цветового фильтра

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,4 +1,20 @@
 {
+    "ColorConfigSettings": {
+        "CameraIndex": 0,
+        "H": {
+            "Min": 170,
+            "Max": 220
+        },
+        "S": {
+            "Min": 100,
+            "Max": 255
+        },
+        "V": {
+            "Min": 140,
+            "Max": 255
+        }
+    },
+
     "TriangleSettings": {
         "Width": 800,
         "Height": 600,
