[add] внедрено отслеживание лица в отдельном потоке в пример с отображением треугольника

--- a/appsettings.json
+++ b/appsettings.json
@@ -1,6 +1,13 @@
 {
     "TriangleWithDetectionSettings": {
-
+        "FaceTrackerSettings": {
+            "DistanceBetweenCameras": 0.58,
+            "CameraHeight": 1.26,
+            "CameraHorizontalAngle": 76,
+            "CameraVerticalAngle": 53,
+            "ImageWidth": 640,
+            "ImageHeight": 480
+        }    
     },
     
     "ColorConfigSettings": {
